LOW / preparation for Java 9, removing deprecated constructors of primitive types (replaced by valueOf)